--- a/Library.properties
+++ b/Library.properties
@@ -5,6 +5,6 @@ maintainer=Robert E Bridges/Kris Kasprzak
 sentence=A library for interacting with the EBYTE LoRa modules.
 paragraph=Allows UART comms using EBYTE modules.
 category=Communication
-url=https://github.com/KrisKasprzak/EBYTE
+url=https://github.com/BriComp/EBYTE_E220
 architectures=*
 includes=WProgram.h
